# metaflow-demo

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: features.ini  model.ini  paths.ini
configs/base/: data.yaml  model.yaml  train.yaml
flows/: predict_flow.py
flows/training/: training_flow.py
ml_pipeline/config/: config.ini  config_parser.py
ml_pipeline/flows/: predict_flow.py  train_flow.py
ml_pipeline/flows/training/: train_flow.py
ml_pipeline/models/components/: feature_processor.py
ml_pipeline/monitoring/alerts/: email_alerts.py
ml_pipeline/monitoring/metrics/: data_metrics.py
ml_pipeline/utils/: errors.py  logger.py
scripts/: generate_data.py  predict.py  train.py
scripts/generation/: __init__.py  predict_gen.py  test_gen.py  train_gen.py
src/data/: loader.py
src/features/: processors.py
src/ml_pipeline/: __init__.py
src/ml_pipeline/flows/prediction/: predict_flow.py
src/ml_pipeline/flows/training/: train_flow.py
src/ml_pipeline/models/architectures/: base_model.py  random_forest.py
src/ml_pipeline/models/components/: feature_processor.py
src/ml_pipeline/monitoring/alerts/: alert_handler.py
src/ml_pipeline/monitoring/metrics/: model_metrics.py
src/ml_pipeline/utils/: logger.py
src/models/: model.py
src/pipelines/: predict.py  train.py
src/utils/: config.py  logger.py  metrics.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/test_flows/: test_prediction.py  test_training.py
