[project]
name = "medium-ml-project"
version = "0.1.0"
description = "A medium-sized machine learning project template"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=1.4.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "joblib>=1.1.0",
    "metaflow>=2.10.0",
    "mlflow>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
