[project]
name = "metaflow_demo"
version = "0.1.0"
description = "ML Pipeline with Metaflow and MLflow"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
   "metaflow>=2.10.0",
   "mlflow>=2.10.0",
   "pandas>=2.0.0",
   "numpy>=1.24.0",
   "scikit-learn>=1.3.0",
   "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
   "pytest>=7.0.0",
   "pytest-cov>=4.0.0",
   "black>=23.0.0",
   "isort>=5.12.0",
   "mypy>=1.0.0",
   "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ml_pipeline"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
