[project]
name = "ml_pipeline"
version = "0.1.0"
description = "ML Pipeline with Metaflow and MLflow"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
   "metaflow>=2.10.0",
   "mlflow>=2.10.0",
   "pandas>=2.0.0",
   "numpy>=1.24.0",
   "scikit-learn>=1.3.0",
   "joblib>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ml_pipeline"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
